# windy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REVIEW.md  _deploy.py  _deploy3.py  _verify.py  deploy-frontend.ps1  deploy.sh  deploy_memory_worker.sh  deploy_to_128.py  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  start.sh
doc/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  v128-发布说明.md  一致性设计.md  数据模型.md  架构基线.md  迁移参考.md
mneme/: __init__.py  config.py  logging.py  main.py
scripts/: resegment_chunks.py  setup_xiaomi_mimo.py
test_docs/: README.md  test_A09_whitespace.txt  test_A10_emptylines.txt  test_A11_control.txt  test_A12_footer.txt  test_A13_chunking.txt
tests/: conftest.py  test_agent_lifecycle.py  test_agents_lifecycle.py  test_ask_endpoint.py  test_assets.py  test_audit_outbox.py  test_auth.py  test_backup.py  test_backup_restore_api.py  test_batch_encrypt.py  test_budget.py  test_citation.py  test_cleaner.py  test_context_assembly.py  test_context_compile.py  test_conversations.py  test_directory_structure.py  test_dlq.py  test_dlq_replay.py  test_docx_parser.py  test_facade.py  test_file_encrypt.py  test_gateway_call.py  test_gateway_providers.py  test_health_logging_metrics.py  test_importer.py  test_inbox_assets.py  test_index_lifecycle.py  test_key_store.py  test_knowledge.py  test_knowledge_chunking.py  test_memories.py  test_memory_auto_extract.py  test_memory_candidates.py  test_memory_extract.py  test_memory_index.py  test_memory_refine.py  (+37 more)
(+464 files in other folders)
